Fix mobile layout issues: text overlapping Agrasen image and social icons overlapping

--- a/style.css
+++ b/style.css
@@ -2672,10 +2672,10 @@ footer a:hover {
         font-size: 25px !important;
     }
     .facebook-float {
-        width: 50px;
-        height: 50px;
-        bottom: 80px;
-        right: 20px;
-        font-size: 25px;
+        width: 50px !important;
+        height: 50px !important;
+        bottom: 80px !important;
+        right: 20px !important;
+        font-size: 25px !important;
     }
 }
